--- a/recipes/rb-iruby/meta.yaml
+++ b/recipes/rb-iruby/meta.yaml
@@ -22,14 +22,14 @@ requirements:
     - ruby
   run:
     - ruby
-    - bond
-    - data_uri
-    - mimemagic
-    - multi_json
+    - rb-bond >=0.5,<1
+    - rb-data_uri >=0.1,<1
+    - rb-mimemagic >=0.3,<1
+    - rb-multi_json >=1.11,<2
 
-test:
-  commands:
-    - bash run-test.sh
+      #test:
+      #commands:
+      #- iruby
 
 about:
   home: https://rubygems.org/gems/{{ name }}
